<resources>

    <!--三种字体大小-->
    <integer name="font_size_small">16</integer>
    <integer name="font_size_medium">20</integer>
    <integer name="font_size_big">24</integer>

    <string name="app_name">浮云村</string>
    <string name="app_slogan">全新的里屋</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login_button">让我登一下呗</string>
    <string name="save_login">记住密码</string>
    <string name="action_settings">里屋</string>
    <string name="title_activity_forum">帖子</string>
    <string name="login_error">您登录失败了，请重新尝试</string>
    <string name="login_info_error">该用户已被占用或者密码输入错误。您最多有……嗯，几次尝试吧。</string>
    <string name="empty_username">请输入用户名</string>
    <string name="empty_password">请输入用户密码</string>
    <string name="page_load">页面加载中…</string>
    <string name="repeat_submit">请勿重复提交</string>

    <!--page-->
    <string name="page_full">我累了，不想再加载了</string>
    <string name="page_load_failure">页面读取失败，请重新加载</string>
    <string name="page_reload">重新加载</string>
    <string name="start_reload">开始加载</string>
    <string name="webview_loading">页网还在加载中，完成后才能下拉。</string>
    <!--page-->

    <string name="net_error">服务器抽疯了，一会再试下吧</string>
    <string name="title_activity_view_topic">ViewTopic</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string-array name="array_left_menu_forum">
        <item id="1">发帖</item>
        <item id="2">传呼</item>
        <item id="3">查询</item>
        <item id="4">设置</item>
        <item id="5">刷新</item>
        <item id="6">注销</item>
        <item id="7">退出</item>
        <item id="8">关于</item>
    </string-array>
    <string-array name="array_left_menu_topic">
        <item id="1">回复</item>
        <item id="2">刷新</item>
        <item id="3">到底</item>
    </string-array>
    <string name="title_activity_reply">回帖</string>
    <string name="submit_button">提交</string>
    <string name="send_button">发送</string>
    <string name="send_delete">删除</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_post">发帖</string>
    <string name="title_activity_pm">短消息</string>
    <string name="title_activity_pm_message">回复短消息</string>
    <string name="send_pm_message">发传呼</string>
    <string name="settings_title">设置</string>
    <!--下拉的配置-->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!--上推的配置-->
    <string name="push_to_load">上推可以加载</string>
    <string name="release_to_load">松开可以加载</string>
    <!--END-->

    <!--发/回帖相关-->
    <string name="title">帖子标题</string>
    <string name="aboutlink">相关链接</string>
    <string name="imglink">相关图片</string>
    <string name="face">表情</string>
    <string name="ifanonymity">匿名</string>
    <string name="disable_update">不UP</string>
    <string name="sig">签名</string>
    <string name="numberSigned">送楼主MP</string>
    <string name="clearQuoteButton">清空引用</string>
    <string name="empty_message">请填写好回复内容</string>
    <string name="page_submit_now">正在提交</string>
    <string name="parameter_error">参数错误</string>
    <string name="limit_mp">看帖最低MP</string>
    <string name="modify_error">修改失败！</string>
    <!--上推的配置-->
    <!--短消息的-->
    <string name="send_now">发送中...</string>
    <string name="send_done">发送完成！</string>
    <string name="send_failed">发送失败</string>
    <string name="send_failed_retry">发送失败，请重新尝试</string>
    <string name="delete_failed">删除失败</string>
    <string name="title_activity_my_topic">我的回复</string>
    <!-- -->
    <string name="title_activity_search">查询</string>
    <string name="title_activity_send_pm">SendPm</string>
    <string name="title_activity_about">关于</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="new_version_publish">有一个新的版本已经发布</string>
    <string name="confirm_download">是否确认下载？</string>
    <string name="title_activity_file_down_load">文件下载</string>
    <string name="have_cancel_download">已取消</string>
    <string name="have_done_download">下载完成，点击打开。</string>


</resources>
